# open-easy-web

./: .gitignore  CLAUDE.md  Cargo.toml  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.md  index.html  install.ps1  install.sh
.github/workflows/: release.yml
android/: build.gradle.kts  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/tokyo/runo/openeasyweb/: MainActivity.kt  PowerProfile.kt  ProfileSelectActivity.kt
android/app/src/main/res/drawable/: ic_launcher_alwayson.xml  ic_launcher_normal.xml  ic_launcher_powersave.xml
android/app/src/main/res/layout/: activity_main.xml  activity_profile_select.xml
android/app/src/main/res/layout-sw600dp/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
deploy/apache/: vhost-fastapi.conf.template  vhost-laravel.conf.template  vhost-php.conf.template  vhost-proxy.conf.template  vhost-static.conf.template  vhost-wordpress.conf.template
deploy/nginx/: vhost-fastapi.conf.template  vhost-laravel.conf.template  vhost-php-http-only.conf.template  vhost-php.conf.template  vhost-proxy.conf.template  vhost-static.conf.template  vhost-wordpress.conf.template
deploy/systemd/: easyweb-tls-monitor.service.template  easyweb-tls-monitor.timer  easyweb-tls-renew.service  easyweb-tls-renew.timer  install-systemd-units.sh
docs/: HYBRID_NETWORK_ARCHITECTURE.md
scripts/: audit-orphaned-services.sh  check-all-tls.sh  check-tls.sh  check-vhost-isolation.sh  deploy-vps.ps1  gen-vhost.sh  serve.sh  setup-tls.sh  switch-app-server.sh  switch-engine.sh
server/: Cargo.toml
server/src/: appserver_registration.rs  auth.rs  mail.rs  main.rs  php_detector.rs  sms.rs  tls.rs  totp.rs  upload.rs  users.rs  vhost.rs
src/: api_auth.rs  api_free_domain.rs  api_upload.rs  auth_ui.rs  dom.rs  free_domain_ui.rs  lib.rs  profiles.rs  setup_wizard_ui.rs  shell.rs  view_bridge.rs
