[workspace]

[package]
name = "open-easy-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["open-easy-web Contributors"]
license = "Apache-2.0"
description = "open-easy-web: KUSANAGI-like easy domain/HTTPS/website-ops tool (site management, IP launch, domain+HTTPS vhost, auto-monitor/auto-renew, VPS deploy). Rust compiled to WebAssembly, no Tauri/Node.js/TypeScript build chain. Web-speedup features live in open-runo/poem-cosmo-tauri instead. Fuses the formerly-separate aon-co-jp/open-easy-web and aon-co-jp/open-easy-web repositories (2026-07-17)."
repository = "https://github.com/aon-co-jp/open-easy-web"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# クロスリポジトリ配線(§0.9.3 Phase 3): 第二のReactのDOMアプライヤ
open-runo-view = { git = "https://github.com/aon-co-jp/open-runo", features = ["dom"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "FormData",
    "Headers",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlSelectElement",
    "Node",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Url",
    "Window",
]

[profile.release]
opt-level = "s"
lto = true
